# cfl-foundations

./: .gitignore  CLAUDE.md  Cargo.toml  DOCS_SWEEP.md  README.md  TODO.md  led_latency_notes.txt  pennance.md  plot_tracking.py  units-transformation-todo.md
.githooks/: commit-msg  (+1 more)
hardware/: Cargo.toml
hardware/scripts/: test_pipython.py
hardware/src/: fsm_interface.rs  lib.rs
hardware/src/exail/: angle.rs  checksum.rs  mod.rs  parser.rs  temperature.rs  time.rs
hardware/src/exail/messages/: gyro_data_filt.rs  gyro_data_full.rs  gyro_data_raw.rs  mod.rs
hardware/src/nsv455/camera/: controls.rs  nsv455_camera.rs
hardware/src/orin/: monitor.rs
hardware/src/pi/: e727.rs  gcs.rs  mod.rs  s330.rs
hardware/src/pi/e727/: errors.rs  mod.rs  params.rs  recorder.rs
meter-math/: Cargo.toml  README.md
meter-math/src/: bilinear.rs  icp.rs  icp_bias_test.rs  stats.rs
meter-math/src/icp/: correspondence.rs  mod.rs  tests.rs  transform.rs
shared-wasm/: Cargo.toml
shared-wasm/src/: calibrate_client.rs  calibration.rs  camera.rs  fsm.rs  http_client.rs  lib.rs  log.rs  pattern.rs  ring_buffer.rs  star_detection.rs  stats_scan.rs  tracking.rs  types.rs
simulator/: Cargo.toml
simulator/data/: missing_bright_stars.csv
simulator/examples/: airy_disk_demo.rs  benchmark_convolve2d.rs  catalog_star_renderer.rs  catalog_stats.rs  centroid_accuracy_test.rs  chromatic_airy_demo.rs  convolution_benchmark.rs  enhanced_star_renderer.rs  focal_plane_viz.rs  noise_dump.rs  object_detection.rs  run_benchmarks.rs  scope_view.rs  sensor_comparison.rs  star_bbox_detection.rs  star_detection.rs  star_field_renderer.rs  star_field_reticle.rs  star_simulation.rs  telescope_sampling_info.rs  text_rendering_test.rs  undersampled_psf_bias.rs  wwt_failed_detection.rs  zodiacal_background.rs  zodical_background.rs
simulator/src/: lib.rs  scene.rs  shared_args.rs  star_math.rs
simulator/src/algo/: icp.rs  icp_bias_test.rs  lookup_table.rs  min_max_scan.rs  misc.rs  mod.rs  psd.rs  quaternion.rs  spline.rs  stats.rs
simulator/src/hardware/: dark_current.rs  mod.rs  read_noise.rs  satellite.rs  sensor.rs  sensor_array.rs  sensor_noise.rs  star_projection.rs  telescope.rs
simulator/src/image_proc/: airy.rs  centroid.rs  convolve2d.rs  detection.rs  electron.rs  histogram_stretch.rs  image.rs  mod.rs  noise.rs  overlay.rs  render.rs  segment.rs  thresholding.rs
simulator/src/image_proc/detection/: aabb.rs  config.rs  detection.rs  mod.rs  naive.rs  thresholding.rs  unified.rs
simulator/src/image_proc/io/: fits.rs  mod.rs
simulator/src/photometry/: color.rs  filters.rs  gaia.rs  human.rs  mod.rs  photoconversion.rs  quantum_efficiency.rs  spectrum.rs  stellar.rs  stis_zodiacal.rs  trapezoid.rs  zodiacal.rs  zodical.rs
simulator/src/sims/: mod.rs  scene_runner.rs  single_detection.rs
test-bench/: Cargo.toml
test-bench-shared/: Cargo.toml
test-bench-shared/src/: calibrate_client.rs  fgs_client.rs  lib.rs
test-bench/poa_cameras/: Cargo.toml
test-bench/poa_cameras/src/: lib.rs
test-bench/src/: camera_init.rs  camera_server.rs  display_keepalive.rs  display_utils.rs  embedded_assets.rs  gpio.rs  lib.rs  mjpeg.rs  ws_log_stream.rs  ws_stream.rs
test-bench/src/calibrate/: display.rs  mod.rs  pattern.rs  pattern_builders.rs  schema.rs
test-bench/src/calibration_controller/: grid.rs  init.rs  live_mode.rs  mod.rs  render_tui.rs  single_pass.rs
test-bench/src/camera_server/: capture.rs
test-bench/src/display_patterns/: assets.rs  checkerboard.rs  circling_pixel.rs  gyro_walk.rs  mod.rs  optical_calibration.rs  remote_controlled.rs  shared.rs  siemens_star.rs  static_noise.rs  uniform.rs  wiggling_gaussian.rs
test-bench/src/fsm_calibration/: config.rs  fitter.rs  generator.rs  matrix.rs  mod.rs
test-bench/src/orin_monitoring/: server.rs
test-bench/src/poa/: camera.rs
test-bench/templates/: live_view.html
(+214 files in other folders)
