[package]
name = "hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hardware drivers for test bench equipment"
repository.workspace = true
license.workspace = true

[[bin]]
name = "fsm_tool"
path = "src/bin/fsm_tool.rs"

[[bin]]
name = "pi_fsm_test"
path = "src/bin/pi_fsm_test.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
