[package]
name = "meter-math"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Mathematical algorithms for astronomical simulations and star tracking"
repository.workspace = true
license.workspace = true
keywords = ["astronomy", "quaternion", "icp", "interpolation", "math"]
categories = ["science", "mathematics"]

[dependencies]
# Linear algebra
nalgebra = "0.32"
ndarray = { version = "0.16", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Utilities
thiserror = "2.0"
log = "0.4"
scilib = "1.0.0"

[dev-dependencies]
approx = "0.5"
rand = "0.9"
rand_distr = "0.5.1"
serde_json = "1.0"
