[package]
name = "simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Space telescope optical and sensor simulation"
repository.workspace = true
license.workspace = true

[dependencies]
ephemeris = { path = "../ephemeris" }
nalgebra = "0.32"     # Linear algebra
image = "0.24"        # Image processing
rand = "0.8"          # Random number generation
ndarray = "0.15"      # Multidimensional arrays
rayon = "1.7"         # Parallel computing

[dev-dependencies]
criterion = "0.5"     # Benchmarking